Add difference and add validation to the methods so we can do operations only on validated methods

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -313,6 +313,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionDifference</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>doDifference()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>199</x>
+     <y>149</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>createNewAutomata()</slot>
